force-app/main/default/objects/StandardVersion__c/StandardVersion__c.object-meta.xml
<CustomObject>
    <label>Standard Version</label>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>Standard Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>