force-app/main/default/objects/StandardVersion__c/fields/Published_By__c.field-meta.xml
<CustomField>
    <fullName>Published_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Published By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Published Standard Versions</relationshipLabel>
    <relationshipName>PublishedStandardVersions</relationshipName>
    <type>Lookup</type>
</CustomField>