force-app/main/default/objects/StandardVersion__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>Standard</label>
    <referenceTo>Standard__c</referenceTo>
    <relationshipLabel>Standard Versions</relationshipLabel>
    <relationshipName>StandardVersions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>